Restructure of the ViewGUIController hierarchy
Now ViewGUIController has only the essential abstract methods that are in common with all the controllers, and each scene is handled by the associated controller (with its specific method)